various content updates

--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -2,25 +2,25 @@
     <h1>Employment</h1>
     <article>
         <header>
-            <h1>Software Engineer</h1>
-            <span><address>Edinburgh, UK</address><time>2015 to Present</time></span>
+            <h1>Linux SRE</h1>
+            <span><address>Northrop Grumman</address></span><br />
+            <span><address>Melbourne, FL</address><time>2016 to Present</time></span>
         </header>
-        <p>Lorem ipsum dolor sit amet, his et viris petentium philosophia,
-            at vix debitis deleniti. At vis velit volumus alienum, agam vocent assueverit usu ex. </p>
+        <p>Part of an Operations Team providing leadership, design/architecture, and mentorship across multiple programs at our Melbourne Center of Excellence.</p>
     </article>
     <article>
         <header>
-            <h1>iOS Developer</h1>
-            <span><address>Glasgow, UK</address><time>2014 to 2015</time></span>
+            <h1>Senior Systems Engineer</h1>
+            <span><address>The Network Support Company</address></span><br />
+            <span><address>Orlando, FL</address><time>2014 to 2015</time></span>
         </header>
-        <p>Qui bonorum menandri intellegebat ex, mel quando oblique an. Et eam virtute debitis philosophia,
-            unum ancillae disputationi vim in. Ipsum vidisse meliore ex eum,
-            delectus tacimates conclusionemque has ei. Eam ubique cetero scribentur ne.</p>
+        <p>As part of the Network Support Company, I designed, executed, and maintained IS environments for clients in the small to medium business sector. Additionally, I was tasked with bringing internal infrastructure changes where needed.</p>
     </article>
     <article>
         <header>
-            <h1>Teaching Assistant</h1>
-            <span><address>University of Glasgow, Glasgow, UK</address><time>2013 to 2014</time></span>
+            <h1>Senior Systems Engineer</h1>
+            <span><address>ENSCO, Inc. </address></span><br />
+            <span><address>Melbourne, FL </address><time>2005 to 2014</time></span>
         </header>
         <p>Latine bonorum deserunt at nam. Mea nisl officiis eu, propriae similique has te, mei an brute meliore electram.
             Quo admodum omittantur ei, etiam principes at eos. Sit vocent commodo ceteros in, at mel idque everti.</p>
