--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -22,8 +22,7 @@
             <span><address>ENSCO, Inc. </address></span><br />
             <span><address>Melbourne, FL </address><time>2005 to 2014</time></span>
         </header>
-        <p>Latine bonorum deserunt at nam. Mea nisl officiis eu, propriae similique has te, mei an brute meliore electram.
-            Quo admodum omittantur ei, etiam principes at eos. Sit vocent commodo ceteros in, at mel idque everti.</p>
+        <p>During my time at ENSCO, I was a member of an Operations team providing architecture and administration for enterprise infrastructure comprising of multiple datacenters and CONUS remote office locations. I was responsible for backup administration, various virtualization platforms, HPC administration, storage architecture and administration, and day to day operations of corporate email, VOIP, file/print/DNS services, and helpdesk. I have also filled a ‘DevOps’ role with development groups across the company, providing administration in CI/Agile environments.</p>
     </article>
     <article>
         <header>
