--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -6,7 +6,15 @@
             <span><address>Northrop Grumman</address></span><br />
             <span><address>Melbourne, FL</address><time>2016 to Present</time></span>
         </header>
-        <p>Part of an Operations Team providing leadership, design/architecture, and mentorship across multiple programs at our Melbourne Center of Excellence.</p>
+        <p>Part of an Operations Team providing leadership, design/architecture, and mentorship across multiple programs at our Melbourne Center of Excellence.</p><br />
+        <ul>
+        <li>Introduced Satellite Server, Foreman, and Puppet to site.</li>
+        <li>Implemented general Ops practices such as Change Management, Monitoring, Infra as Code to stop
+        configuration drift.</li>
+        <li>Performing various ESXi and Microsoft AD/Exchange upgrades.</li>
+        <li>Engineering Mentor for various new and rotating employees.</li>
+        </ul>
+
     </article>
     <article>
         <header>
@@ -14,7 +22,16 @@
             <span><address>The Network Support Company</address></span><br />
             <span><address>Orlando, FL</address><time>2014 to 2015</time></span>
         </header>
-        <p>As part of the Network Support Company, I designed, executed, and maintained IS environments for clients in the small to medium business sector. Additionally, I was tasked with bringing internal infrastructure changes where needed.</p>
+        <p>As part of the Network Support Company, I designed, executed, and maintained IS environments for clients in the small to medium business sector. Additionally, I was tasked with bringing internal infrastructure changes where needed.</p><br />
+        <ul>
+        <li>Met with potential new clients to assess the existing client environment and provide documentation.</li>
+        <li>Designed, proposed, and implemented projects with clients onsite.</li>
+        <li>Worked closely with PM to ensure concurrent projects were executed in a successful and realistic timeframe with minimal downtime.</li>
+        <li>Participated in on-call pager duty as well as helpdesk support when necessary.</li>
+        <li>Successful projects included: Windows Domain Intra/Inter Forest migrations, Exchange migrations (2003-2013), VMWare ESXi virtualizations/upgrades, Cisco and HP switching infrastructure forklift upgrades and design changes.</li>
+        <li>Successfully proposed and executed 7/12 proposed projects in a 12-month timeframe.</li>
+        </ul>
+
     </article>
     <article>
         <header>
@@ -22,22 +39,17 @@
             <span><address>ENSCO, Inc. </address></span><br />
             <span><address>Melbourne, FL </address><time>2005 to 2014</time></span>
         </header>
-        <p>During my time at ENSCO, I was a member of an Operations team providing architecture and administration for enterprise infrastructure comprising of multiple datacenters and CONUS remote office locations. I was responsible for backup administration, various virtualization platforms, HPC administration, storage architecture and administration, and day to day operations of corporate email, VOIP, file/print/DNS services, and helpdesk. I have also filled a ‘DevOps’ role with development groups across the company, providing administration in CI/Agile environments.</p>
-    </article>
-    <article>
-        <header>
-            <h1>iOS Developer</h1>
-            <span><address>Student Start-up, Glasgow, UK</address><time>2013</time></span>
-        </header>
-        <p>Mucius sententiae et mei, nec an diam ignota, tale epicurei intellegebat ne sit. Sumo pertinacia contentiones duo ei.</p>
-    </article>
-    <article>
-        <header>
-            <h1>Web Developer</h1>
-            <span><address>Birmingham, UK</address><time>2007 to 2010</time></span>
-        </header>
-        <p> Et sed tritani volumus, dico rebum facilisis ea sed. His mundi efficiantur concludaturque no.
-            Cu eos argumentum constituam repudiandae, eu eum lorem nostrum, ei mel dicam iriure fabellas.
-        </p>
+        <p>During my time at ENSCO, I was a member of an Operations team providing architecture and administration for enterprise infrastructure comprising of multiple datacenters and CONUS remote office locations. I was responsible for backup administration, various virtualization platforms, HPC administration, storage architecture and administration, and day to day operations of corporate email, VOIP, file/print/DNS services, and helpdesk. I have also filled a ‘DevOps’ role with development groups across the company, providing administration in CI/Agile environments.</p><br />
+        <ul>
+        <li>Top level support for Windows issues.</li>
+        <li>Top level support for Unix/Linux/HPC issues.</li>
+        <li>Designed automated workstation imaging solution for entire company.</li>
+        <li>DevOps role for multiple development groups within the company.</li>
+        <li>SME for all backup systems.</li>
+        <li>Led company-wide Windows domain and Exchange upgrade (2000->2008/2007).</li>
+        <li>Virtualized east coast offices (8 locations).</li>
+        <li>Virtualized west coast offices (3 locations).</li>
+        <li>Led second round of all remote office virtualizations (7 locations, 2013).</li>
+        </ul>
     </article>
 </section>
