--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -29,7 +29,9 @@ a:hover, a:focus {
 p, address {
     margin-bottom: 0;
 }
-
+ol, ul {
+        list-style-type: disc; 
+        padding-left: 30px;}
 .me {
     width: 100px;
     height: 100px;
