--- a/_includes/initiatives.html
+++ b/_includes/initiatives.html
@@ -1,21 +1,15 @@
 <section class="thirteen columns">
-    <h1>Initiatives</h1>
+    <h1>Certifications</h1>
     <article>
         <header>
-            <h1>Graduate Summer Student</h1>
-            <span><address>University of Glasgow, UK</address><time>2013</time></span>
+            <h1>VMWare Certified Professional 5</h1>
+            <span><address>VCP510: #220142173</address></span>
         </header>
-        <p>
-            Courses: Nec et duis iriure temporibus, ullum adolescens eam ea.
-        </p>
     </article>
     <article>
         <header>
-            <h1>Student Volunteer</h1>
-            <span><address>British RedCross, Glasgow, UK</address><time>2013</time></span>
+            <h1>Microsoft Certified Systems Engineer</h1>
+            <span><address>MCSE: #6451783</address></span>
         </header>
-        <p>
-            Fundraiser: Lorem adipiscing ei eam, eros conceptam maiestatis ne sea.
-        </p>
     </article>
 </section>
