--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -1,6 +1,6 @@
 <section class="thirteen columns">
     <h1>Hobbies</h1>
     <article>
-        <p>Music, Movies, Tennis, Travelling, Cooking.</p>
+        <p>Outside of my ninja duties I enjoy traveling, running, diving, and spearfishing. In fact I love traveling so much that in 2015 I took an 8-month sabbatical from $WORK and backpacked my way across 17 countries!</p>
     </article>
 </section>
