--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -1,16 +1,19 @@
 <section class="thirteen columns">
-    <h1>Programming Skills</h1>
+    <h1>Skillsets</h1>
     <article>
         <header>
-            <h1>Software engineering & web development</h1>
+            <h1>Hardware</h1>
         </header>
-        <p>
-            <em>C/C++ & Objective-C</em>
-        <p>
-            <em>Java</em>, <em>Python</em>, <em>PHP</em> &amp; <em>Git</em>
-        </p>
-        <p>
-            <em>HTML/CSS3</em> &amp; <em>Javascript</em>
-        </p>
+            <p>Dell/HP/Sun server and desktop hardware. Multiple HPC cluster vendors, IBM Power Series. Cisco and HP networking, EMC Isilon, Dell Powervault, and many lower tier storage vendors (fiber, iSCSI deployments).
+            </p>
+        <header>    
+            <h1>Software</h1>
+        </header>
+            <p>RHEL/CentOS, Windows, Solaris 8/10, AIX 5.3-7. Active Directory, Exchange, MDT. VMWare ESXi, Solaris Zones, and KVM. Xymon, Nagios, Icinga, Solarwinds, and Sensu monitoring suites.
+            </p>
+        <header>
+            <h1>Code</h1>
+        </header>
+            <p>I am comfortable with Powershell, Bash, and Python. I have experience using/migrating/implementing modern (Git) and more traditional (CVS, SVN, Mantis) version control systems. I am big fan of Atlassian products as well and have experience administering JIRA, Confluence, BitBucket, GitLab, and Jenkins.</p>
     </article>
 </section>
