--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,6 +1,6 @@
 <section class="thirteen columns">
     <h1>About Me</h1>
     <article>
-        <p>I am an outgoing and energentic Systems Engineer with 10+ years experience shaping a career that fits my professional skillset, personality, and organizational values. The majority of my work has centered around Operations, Linux/Windows Administration, Developer Support and Operations ("DevOps"), and Automation. I enjoy the role of Generalist but have often dug into a specialized technology to solve a problem or expand my skillset. </p><br />
+        <p>I am an outgoing and energentic Systems Engineer with 10+ years experience. My career is now focused around positions that fit my professional skillset, personality, and organizational values. The majority of my work has centered around Operations, Linux/Windows Administration, Developer Support and Operations ("DevOps"), and Automation. I enjoy the role of Generalist but have often dug into a specialized technology to solve a problem or expand my skillset. </p><br />
     </article>
 </section>
