--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -2,7 +2,7 @@
     <h1>Employment</h1>
     <article>
         <header>
-            <h1>Linux SRE</h1>
+            <h1>Linux Systems Administrator</h1>
             <span><address>Northrop Grumman</address></span><br />
             <span><address>Melbourne, FL</address><time>2016 to Present</time></span>
         </header>
