--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -9,7 +9,7 @@
         <header>    
             <h1>Software</h1>
         </header>
-            <p>RHEL/CentOS, Windows, Solaris 8/10, AIX 5.3-7. Active Directory, Exchange, MDT. VMWare ESXi, Solaris Zones, and KVM. Xymon, Nagios, Icinga, Solarwinds, and Sensu monitoring suites.
+            <p>RHEL/CentOS, Windows, AIX 5.3-7. Active Directory, Exchange, MDT. VMWare ESXi, Solaris Zones, and KVM. Xymon, Nagios, Icinga, Solarwinds, and Sensu monitoring suites.
             </p>
         <header>
             <h1>Code</h1>
