--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -1,5 +1,5 @@
 <section class="thirteen columns">
-    <h1>Employment</h1>
+    <h1>CORE STRENGTHS</h1>
     <article>
         <header>
             <h1>Site Reliability Engineer</h1>
