--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,6 +1,8 @@
 <section class="thirteen columns">
     <h1>About Me</h1>
     <article>
-        <p>I am an outgoing and energentic Systems Engineer with 10+ years experience. My career is focused on fulfilling positions within cross-functional teams that fit my professional skillset, personality, and organizational values. Most of my work has been in Operations, Linux/Windows Administration, DevOps, and Automation. I enjoy the role of Generalist but have often dug into a specialized area of technology to fill a role, solve a problem, or expand my skillset. </p><br />
+        <p>I am an outgoing and energentic Systems Engineer with 10+ years experience. My career is focused on fulfilling positions within cross-functional teams that fit my professional skillset, personality, and organizational values. Most of my work has been in Operations, Linux/Windows Administration, DevOps, and Automation. I enjoy the role of Generalist but have often dug into a specialized area of technology to fill a role, solve a problem, or expand my skillset. <br />
+        Outside of my ninja duties, I enjoy traveling, running, diving, freediving, and spearfishing.	
+        </p><br />
     </article>
 </section>
