--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -1,6 +1,6 @@
 <section class="thirteen columns">
     <h1>Hobbies</h1>
     <article>
-        <p>I enjoy traveling, running, diving, and spearfishing. In fact I love traveling so much that in 2015 I took an 8-month sabbatical from $WORK and backpacked my way across 17 countries!</p>
+        <p>I love traveling....in fact I love traveling so much that in 2015 I took an 8-month sabbatical from $WORK and backpacked my way across 17 countries. Life is meant to be lived.</p>
     </article>
 </section>
