--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -1,18 +1,18 @@
 <section class="thirteen columns">
-    <h1>CORE STRENGTHS</h1>
+    <h1>PROFESSIONAL EXPERIENCE</h1>
     <article>
         <header>
             <h1>Site Reliability Engineer</h1>
             <span><address>Northrop Grumman</address></span><br />
             <span><address>Melbourne, FL</address><time>2016 to Present</time></span>
         </header>
-        <p>Part of an Operations Team providing leadership, design/architecture, and mentorship across multiple programs at our Melbourne Center of Excellence.</p><br />
+        <p>As an SRE, I provide leadership, design/architecture, and mentorship across multiple programs. I am currently involved in projects establishing DoD RMF compliance at our Melbourne Center of Excellence.</p><br />
         <ul>
-        <li>Introduced Satellite Server, Foreman, and Puppet to site.</li>
-        <li>Implemented general Ops practices such as Change Management, Monitoring, Infra as Code to stop
-        configuration drift.</li>
-        <li>Performing various ESXi and Microsoft AD/Exchange upgrades.</li>
-        <li>Engineering Mentor for various new and rotating employees.</li>
+        <li>Introduced Lifecycle Management (RHEL Satellite Server) to existing brownfield environment</li>
+        <li>Implemented Configuration Management (Puppet) to standardize environment</li>
+        <li>Established test environment using Vagrant, Puppet, Foreman, and Git.</li>
+        <li>Performed various ESXi and Microsoft AD/Exchange upgrades.</li>
+        <li>Implemented general Ops best practices such as Change Management, Monitoring, Documentation to stop configuration drift.</li>
         </ul>
 
     </article>
