--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -8,8 +8,8 @@
         </header>
         <p>As an SRE, I provide leadership, design/architecture, and mentorship across multiple programs. I am currently involved in projects establishing DoD RMF compliance at our Melbourne Center of Excellence.</p><br />
         <ul>
-        <li>Introduced Lifecycle Management (RHEL Satellite Server) to existing brownfield environment</li>
-        <li>Implemented Configuration Management (Puppet) to standardize environment</li>
+        <li>Introduced Lifecycle Management (RHEL Satellite Server) to existing brownfield environment.</li>
+        <li>Implemented Configuration Management (Puppet) to standardize environment.</li>
         <li>Established test environment using Vagrant, Puppet, Foreman, and Git.</li>
         <li>Performed various ESXi and Microsoft AD/Exchange upgrades.</li>
         <li>Implemented general Ops best practices such as Change Management, Monitoring, Documentation to stop configuration drift.</li>
