--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -11,6 +11,7 @@
         <li>Introduced Lifecycle Management (RHEL Satellite Server) to existing brownfield environment.</li>
         <li>Implemented Configuration Management (Puppet) to standardize environment.</li>
         <li>Established test environment using Vagrant, Puppet, Foreman, and Git.</li>
+        <li>Automated provisioning/hardening/reporting of VMs using Kickstart/Foreman/Puppet.
         <li>Performed various ESXi and Microsoft AD/Exchange upgrades.</li>
         </ul>
 
