--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -22,14 +22,14 @@
             <span><address>The Network Support Company</address></span><br />
             <span><address>Orlando, FL</address><time>2014 to 2015</time></span>
         </header>
-        <p>As part of the Network Support Company, I designed, executed, and maintained IS environments for clients in the small to medium business sector. Additionally, I was tasked with bringing internal infrastructure changes where needed.</p><br />
+        <p>Designed, executed, and maintained IS environments for clients in the small to medium business sector. Tasked with bringing internal infrastructure changes as well.</p><br />
         <ul>
         <li>Met with potential new clients to assess the existing client environment and provide documentation.</li>
-        <li>Designed, proposed, and implemented projects with clients onsite.</li>
-        <li>Worked closely with PM to ensure concurrent projects were executed in a successful and realistic timeframe with minimal downtime.</li>
-        <li>Participated in on-call pager duty as well as helpdesk support when necessary.</li>
-        <li>Successful projects included: Windows Domain Intra/Inter Forest migrations, Exchange migrations (2003-2013), VMWare ESXi virtualizations/upgrades, Cisco and HP switching infrastructure forklift upgrades and design changes.</li>
-        <li>Successfully proposed and executed 7/12 proposed projects in a 12-month timeframe.</li>
+        <li>Designed, proposed, and implemented projects with clients onsite. These were largely Windows Active Directory/Exchange environments with some smaller Linux shops.</li>
+        <li>Worked closely with PMs to ensure concurrent projects were executed in a successful and realistic timeframe with minimal downtime.</li>
+        <li>Participated in on-call pager duty as well as helpdesk support as necessary.</li>
+        <li>Successful projects included: Windows Domain Intra/Inter Forest migrations, Exchange migrations (2003-2013), VMWare ESXi rollouts/upgrades, Cisco and HP switching forklift upgrades and design overhauls.</li>
+        <li>Successfully proposed and executed 7 projects during an 11 month contract.</li>
         </ul>
 
     </article>
