--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -1,10 +1,33 @@
 <section class="thirteen columns">
+    <h1>CORE STRENGTHS</h1>
+    <table>
+        <tr><td>
+        <ul>
+        <li>Linux/Unix Administration<br />
+            (RHEL/CentOS/AIX)</li>
+        <li>Windows Administration</li>
+        <li>Lifecycle Management<br />
+            (Satellite/Foreman, WSUS, MDT)</li>
+        </ul></td>
+        <td><ul>
+        <li>apples</li>
+        <li>bananas</li>
+        <li>pineapples</li>
+        </ul></td>
+        <td>
+        <ul>
+        <li>apples</li>
+        <li>bananas</li>
+        <li>pineapples</li>
+        </ul></td></tr>
+    </table>
+
     <h1>PROFESSIONAL EXPERIENCE</h1>
     <article>
         <header>
             <h1>Site Reliability Engineer</h1>
             <span><address>Northrop Grumman</address></span><br />
-            <span><address>Melbourne, FL</address><time>2016 to Present</time></span>
+            <span><address>Melbourne, FL</address><time>March 2016 to Present</time></span>
         </header>
         <p>As an SRE, I provide leadership, design/architecture, and mentorship across multiple programs. I am currently involved in projects establishing DoD RMF compliance at our Melbourne Center of Excellence.</p><br />
         <ul>
@@ -20,7 +43,7 @@
         <header>
             <h1>Senior Systems Engineer</h1>
             <span><address>The Network Support Company</address></span><br />
-            <span><address>Orlando, FL</address><time>2014 to 2015</time></span>
+            <span><address>Orlando, FL</address><time>June 2014 to May 2015</time></span>
         </header>
         <p>Designed, executed, and maintained IS environments for clients in the small to medium business sector. Tasked with bringing internal infrastructure changes as well.</p><br />
         <ul>
@@ -37,9 +60,9 @@
         <header>
             <h1>Senior Systems Engineer</h1>
             <span><address>ENSCO, Inc. </address></span><br />
-            <span><address>Melbourne, FL </address><time>2005 to 2014</time></span>
+            <span><address>Melbourne, FL </address><time>February 2005 to June 2014</time></span>
         </header>
-        <p>During my time at ENSCO, I was a member of an Operations team providing architecture and administration for enterprise infrastructure comprising of multiple datacenters and CONUS remote office locations. I was responsible for backup administration, various virtualization platforms, HPC administration, storage architecture and administration, and day to day operations of corporate email, VOIP, file/print/DNS services, and helpdesk. I have also filled a ‘DevOps’ role with development groups across the company, providing administration in CI/Agile environments.</p><br />
+        <p>Operations team member providing architecture and administration for enterprise infrastructure comprising of multiple datacenters and remote office locations. Responsible for all virtualization, HPC, storage, and backup systems as well as day to day operations of corporate email, VOIP, file/print/DNS services, and helpdesk. Have filled a ‘DevOps’ role with development groups across the company, providing administration in CI/Agile environments.</p><br />
         <ul>
         <li>Top level support for Windows issues.</li>
         <li>Top level support for Unix/Linux/HPC issues.</li>
