--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -10,9 +10,13 @@
             (Satellite/Foreman, WSUS, MDT)</li>
         </ul></td>
         <td><ul>
-        <li>apples</li>
-        <li>bananas</li>
-        <li>pineapples</li>
+        <li>Automation Toolkits<br />
+            (Git, Vagrant, Puppet)</li>
+        <li>Shell, Python, Powershell</li>
+        <li>Java/Apache/Tomcat</li>
+        <li>VMWare, VirtualBox, KVM</li>
+        <li>System Securing/Hardening<br />
+            (DoD RMF, PCI Compliance)</li>
         </ul></td>
         <td>
         <ul>
