--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -8,6 +8,7 @@
         <li>Windows Administration</li>
         <li>Lifecycle Management<br />
             (Satellite/Foreman, WSUS, MDT)</li>
+        <li>System Architecture</li>
         </ul></td>
         <td><ul>
         <li>Automation Toolkits<br />
