--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -21,9 +21,11 @@
         </ul></td>
         <td>
         <ul>
-        <li>apples</li>
-        <li>bananas</li>
-        <li>pineapples</li>
+        <li>Monitoring</li>
+        <li>Storage Systems<br />
+            (EMC, Dell SAN)</li>
+        <li>Cisco/HP switching</li>
+        <li>Dell/HP/Sun/IBM server hardware<li>
         </ul></td></tr>
     </table>
 
