--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -21,7 +21,8 @@
         </ul></td>
         <td>
         <ul>
-        <li>Monitoring</li>
+        <li>Monitoring <br />
+            (Xymon, Nagios/Icinga, Solarwinds)</li>
         <li>Storage Systems<br />
             (EMC, Dell SAN)</li>
         <li>Cisco/HP switching</li>
