--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -26,7 +26,7 @@
         <li>Storage Systems<br />
             (EMC, Dell SAN)</li>
         <li>Cisco/HP switching</li>
-        <li>Dell/HP/Sun/IBM server hardware<li>
+        <li>Dell/HP/Sun/IBM server hardware</li>
         </ul></td></tr>
     </table>
 
