--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -2,18 +2,14 @@
     <h1>Skillsets</h1>
     <article>
         <header>
-            <h1>Hardware</h1>
+            <h1>Automation</h1>
         </header>
-            <p>Dell/HP/Sun server and desktop hardware. Multiple HPC cluster vendors, IBM Power Series. Cisco and HP networking, EMC Isilon, Dell Powervault, and many lower tier storage vendors (fiber, iSCSI deployments).
-            </p>
-        <header>    
-            <h1>Software</h1>
-        </header>
-            <p>RHEL/CentOS, Windows, Active Directory, Exchange, MDT. VMWare ESXi, Solaris Zones, and KVM. Xymon, Nagios/Icinga, and Solarwinds monitoring suites.
+            <p>Like many in my field, automation is the key focus behind all of my work. I am most familiar
+            with Puppet.
             </p>
         <header>
             <h1>Code</h1>
         </header>
-            <p>I am comfortable with Powershell, Bash, and Python. I have experience using/migrating/implementing modern (Git) and more traditional (CVS, SVN, Mantis) version control systems. I am big fan of Atlassian products as well and have experience administering JIRA, Confluence, BitBucket, GitLab, and Jenkins.</p>
+            <p>I am comfortable with Shell, Powershell, and Python. I have experience using/migrating/implementing modern (Git) and more traditional (CVS, SVN, Mantis) version control systems. I am big fan of Atlassian products as well and have experience administering JIRA, Confluence, BitBucket, GitLab, and Jenkins.</p>
     </article>
 </section>
