--- a/_includes/education.html
+++ b/_includes/education.html
@@ -7,4 +7,16 @@
             <span><address>Orlando, FL</address><time>2005 to 2007</time></span>
         </header>
     </article>
+    <article>
+        <header>
+            <h1>VMWare Certified Professional 5</h1>
+            <span><address>VCP510: #220142173</address></span>
+        </header>
+    </article>
+    <article>
+        <header>
+            <h1>Microsoft Certified Systems Engineer</h1>
+            <span><address>MCSE: #6451783</address></span>
+        </header>
+    </article>
 </section>
