--- a/_includes/education.html
+++ b/_includes/education.html
@@ -19,4 +19,10 @@
             <span><address>MCSE: #6451783</address></span>
         </header>
     </article>
+    <article>
+        <header>
+            <h1>CompTIA Security+ce</h1>
+            <span><address>(Required for DoD 8570.1 compliance)</address></span>
+        </header>
+    </article>
 </section>
