--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -4,6 +4,6 @@
         <header>
             <h1>Code</h1>
         </header>
-            <p>I am comfortable with Shell, Powershell, and Python. I have experience using/migrating/implementing modern (Git) and more traditional (CVS, SVN, Mantis) version control systems. I am big fan of Atlassian products as well and have experience administering JIRA, Confluence, BitBucket, GitLab, and Jenkins.</p>
+            <p>I am comfortable with Shell, Powershell, and Python. I have experience using/migrating/implementing modern (Git) and more traditional (CVS, SVN) version control systems. I am big fan of Atlassian products as well and have experience administering JIRA, Confluence, BitBucket, GitLab, and Jenkins.</p>
     </article>
 </section>
