--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -5,28 +5,24 @@
         <ul>
         <li>Linux/Unix Administration<br />
             (RHEL/CentOS/AIX)</li>
-        <li>Windows Administration</li>
-        <li>Lifecycle Management<br />
-            (Satellite/Foreman, WSUS, MDT)</li>
-        <li>System Architecture</li>
+        <li>AWS Infrastructure</li>
+        <li>Shell, Python, Powershell</li>
+        <li>CI/CD Pipelines</li>
         </ul></td>
         <td><ul>
         <li>Automation Toolkits<br />
             (Git, Vagrant, Puppet)</li>
-        <li>Shell, Python, Powershell</li>
         <li>Java/Apache/Tomcat</li>
-        <li>VMWare, VirtualBox, KVM</li>
-        <li>System Securing/Hardening<br />
-            (DoD RMF, PCI Compliance)</li>
+        <li>VMWare, VirtualBox</li>
         </ul></td>
         <td>
         <ul>
-        <li>Monitoring <br />
-            (Xymon, Nagios/Icinga, Solarwinds)</li>
-        <li>Storage Systems<br />
-            (EMC, Dell SAN)</li>
-        <li>Cisco/HP switching</li>
-        <li>Dell/HP/Sun/IBM server hardware</li>
+        <li>System Architecture</li>
+        <li>Monitoring</li>
+        <li>Storage Systems</li>
+        <li>Windows Administration</li>
+        <li>System Securing/Hardening<br />
+            (DoD RMF, PCI Compliance)</li>
         </ul></td></tr>
     </table>
 
