--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -8,6 +8,7 @@
         <li>AWS Infrastructure</li>
         <li>Shell, Python, Powershell</li>
         <li>CI/CD Pipelines</li>
+        <li>Docker</li>
         </ul></td>
         <td><ul>
         <li>Automation Toolkits<br />
