Why:Removed the Java
*

This change addresses the need by:Because...Java

*

--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -13,7 +13,7 @@
         <td><ul>
         <li>Automation Toolkits<br />
             (Git, Vagrant, Puppet)</li>
-        <li>Java/Apache/Tomcat</li>
+        <li>Apache/Tomcat</li>
         <li>VMWare, VirtualBox</li>
         </ul></td>
         <td>
