--- a/_includes/initiatives.html
+++ b/_includes/initiatives.html
@@ -2,14 +2,30 @@
     <h1>Certifications</h1>
     <article>
         <header>
-            <h1>VMWare Certified Professional 5</h1>
-            <span><address>VCP510: #220142173</address></span>
+            <h1>AWS Certified Solutions Architect Associate – 2018</h1>
+            <span><address></address></span>
         </header>
     </article>
     <article>
         <header>
-            <h1>Microsoft Certified Systems Engineer</h1>
-            <span><address>MCSE: #6451783</address></span>
+            <h1>AWS Certified SysOps Administrator – 2018</h1>
+            <span>
+                <address></address>
+            </span>
+        </header>
+    </article>
+    <article>
+        <header>
+            <h1>AWS Certified DevOps Professional – 2018</h1>
+            <span>
+                <address></address>
+            </span>
+        </header>
+    </article>
+    <article>
+        <header>
+            <h1>VMWare Certified Professional 5</h1>
+            <span><address>VCP510: #220142173</address></span>
         </header>
     </article>
 </section>
