--- a/_includes/education.html
+++ b/_includes/education.html
@@ -9,14 +9,25 @@
     </article>
     <article>
         <header>
-            <h1>VMWare Certified Professional 5</h1>
-            <span><address>VCP510: #220142173</address></span>
+            <h1>AWS Certified Solutions Architect Associate – 2018</h1>
         </header>
     </article>
     <article>
         <header>
-            <h1>Microsoft Certified Systems Engineer</h1>
-            <span><address>MCSE: #6451783</address></span>
+            <h1>AWS Certified SysOps Administrator – 2018</h1>
+        </header>
+    </article>
+    <article>
+        <header>
+            <h1>AWS Certified DevOps Professional – 2018</h1>
+        </header>
+    </article>
+    <article>
+        <header>
+            <h1>VMWare Certified Professional 5</h1>
+            <span>
+                <address>VCP510: #220142173</address>
+            </span>
         </header>
     </article>
     <article>
