--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -1,83 +1,120 @@
 <section class="thirteen columns">
-    <h1>CORE STRENGTHS</h1>
+    <h1>SKILLS/METHODOLOGIES</h1>
     <table>
         <tr><td>
         <ul>
-        <li>Linux/Unix Administration<br />
-            (RHEL/CentOS/AIX)</li>
-        <li>AWS Infrastructure</li>
-        <li>CI/CD Pipelines</li>
-        <li>Docker</li>
+        <li>AWS, GCP</li>
+        <li>BASH, Powershell</li>
+        <li>GitlabCI, Spinnaker, ArgoCD, Jenkins, Helm</li>
+        <li>Kubernetes (EKS, GKE), Docker</li>
         </ul></td>
         <td><ul>
-        <li>Automation Toolkits<br />
-            (Git, Vagrant, Puppet)</li>
-        <li>Apache/Tomcat</li>
-        <li>VMWare, VirtualBox</li>
-        <li>Shell, Python, Powershell</li>
+        <li>Python, Go</li>
+        <li>Datadog, SumoLogic, Honeycomb</li>
         </ul></td>
         <td>
         <ul>
-        <li>System Architecture</li>
-        <li>Monitoring</li>
-        <li>Storage Systems</li>
-        <li>Windows Administration</li>
-        <li>System Securing/Hardening<br />
-            (DoD RMF, PCI Compliance)</li>
+        <li>Kyverno, SOC2, FedRAMP, DoD RMF</li>
+        <li>Git</li>
         </ul></td></tr>
     </table>
 
     <h1>PROFESSIONAL EXPERIENCE</h1>
     <article>
         <header>
-            <h1>Site Reliability Engineer</h1>
-            <span><address>Northrop Grumman</address></span><br />
-            <span><address>Melbourne, FL</address><time>March 2016 to Present</time></span>
+            <h1>Everbridge</h1>
+            <span><address>Senior Platform Engineer (Kubernetes)</address></span><br />
+            <span><address>Remote</address><time>2021 - current (Critical Events Management SaaS platform)</time></span>
         </header>
-        <p>As an SRE, I provide leadership, design/architecture, and mentorship across multiple programs. I am currently involved in projects establishing DoD RMF compliance at our Melbourne Center of Excellence.</p><br />
         <ul>
-        <li>Introduced Lifecycle Management (RHEL Satellite Server) to existing brownfield environment.</li>
-        <li>Implemented Configuration Management (Puppet) to standardize environment.</li>
-        <li>Established test environment using Vagrant, Puppet, Foreman, and Git.</li>
-        <li>Automated provisioning/hardening/reporting of VMs using Kickstart/Foreman/Puppet.
-        <li>Performed various ESXi and Microsoft AD/Exchange upgrades.</li>
+        <li>IC on the platform team responsible for an Internal Developer Platform (IDP) built using Python/GitlabCI/Spinnaker. This IDP enables developers to manage hundreds of microservices via self-service CI/CD leveraging the EKS platform.</li>
+        <li>Collaborate with end user dev teams to promote build and deployment best practices while encouraging developer feedback/contribution to the overall platform.</li>
+        <li>Responsible for day-to-day Kubernetes infrastructure of a dozen medium sized (100+ node) clusters managed in AWS EKS - including supporting controllers/services.</li>
+        <li>Introduced key Observability features to our Kubernetes infrastructure using Datadog and Honeycomb, leading to annual cost savings > $150K.</li>
+        <li></li>
+        </ul>
+        <header>
+            <span><address>Senior Site Reliability Engineer II (Team Lead)</address></span><br />
+            <span><address>Remote</address><time>2020 - 2021 (Critical Events Management SaaS platform)</time></span>
+        </header>
+        <ul>
+        <li>Granted technical guidance for SRE team and downstream product teams in the areas of Microservices (EKS), Observability, IaC, and CI/CD.</li>
+        <li>Led soft-skill efforts such as mentoring, hiring, and peer reviews.</li>
+        <li>Championed and implemented Production Readiness Reviews (PRR) to multiple product suites.</li>
+        <li>Delivered several internal and external Minimum Viable Products (Java Spring Boot, Helm, Terraform) as an embedded SRE.</li>
+        <li></li>
+        </ul>
+        <header>
+            <span><address>Senior Site Reliability Engineer</address></span><br />
+            <span><address>Remote</address><time>2019 - 2020 (Critical Events Management SaaS platform)</time></span>
+        </header>
+        <ul>
+        <li>Worked closely with partner dev teams to migrate/refactor Java Spring Boot applications for our Kubernetes environment.</li>
+        <li>Instrumented microservices utilizing 4 Golden Signals (4GS) methodology and Datadog while partnering with product teams.</li>
+        <li>Established SRE best practices while participating in hiring, mentoring as we continued to expand and centralize our Site Reliability Engineering.</li>
         </ul>
 
     </article>
     <article>
         <header>
-            <h1>Senior Systems Engineer</h1>
-            <span><address>The Network Support Company</address></span><br />
-            <span><address>Orlando, FL</address><time>June 2014 to May 2015</time></span>
+            <h1>LogRhythm</h1>
+            <span><address>Site Reliability Engineer</address></span><br />
+            <span><address>Boulder, CO</address><time>2019 - 2019 (Security Incident and Event Management SaaS)</time></span>
         </header>
-        <p>Designed, executed, and maintained IS environments for clients in the small to medium business sector. Tasked with bringing internal infrastructure changes as well.</p><br />
         <ul>
-        <li>Met with potential new clients to assess the existing client environment and provide documentation.</li>
-        <li>Designed, proposed, and implemented projects with clients onsite. These were largely Windows Active Directory/Exchange environments with some smaller Linux shops.</li>
-        <li>Worked closely with PMs to ensure concurrent projects were executed in a successful and realistic timeframe with minimal downtime.</li>
-        <li>Participated in on-call pager duty as well as helpdesk support as necessary.</li>
-        <li>Successful projects included: Windows Domain Intra/Inter Forest migrations, Exchange migrations (2003-2013), VMWare ESXi rollouts/upgrades, Cisco and HP switching forklift upgrades and design overhauls.</li>
-        <li>Successfully proposed and executed 7 projects during an 11 month contract.</li>
+        <li>IC on a small team responsible for LogRhythm Cloud, the first company SaaS product.</li>
+        <li>Worked to refactor an on-prem software stack to a fully automated solution inside GCP. Technologies included Ubuntu, Windows, BASH, Powershell, MySQL, Rundeck, Terraform, Jenkins, Elasticsearch, Apache, and Google Cloud Operations.</li>
         </ul>
 
     </article>
     <article>
         <header>
-            <h1>Senior Systems Engineer</h1>
-            <span><address>ENSCO, Inc. </address></span><br />
-            <span><address>Melbourne, FL </address><time>February 2005 to June 2014</time></span>
+            <h1>Northrop Grumman</h1>
+            <span><address>Site Reliability Engineer</address></span><br />
+            <span><address>Melbourne, FL</address><time>2016 - 2018 (Aerospace)</time></span>
         </header>
-        <p>Operations team member providing architecture and administration for enterprise infrastructure comprising of multiple datacenters and remote office locations. Responsible for all virtualization, HPC, storage, and backup systems as well as day to day operations of corporate email, VOIP, file/print/DNS services, and helpdesk. Have filled a ‘DevOps’ role with development groups across the company, providing administration in CI/Agile environments.</p><br />
         <ul>
-        <li>Top level support for Windows issues.</li>
-        <li>Top level support for Unix/Linux/HPC issues.</li>
-        <li>Designed automated workstation imaging solution for entire company.</li>
-        <li>DevOps role for multiple development groups within the company.</li>
-        <li>SME for all backup systems.</li>
-        <li>Led company-wide Windows domain and Exchange upgrade (2000->2008/2007).</li>
-        <li>Virtualized east coast offices (8 locations).</li>
-        <li>Virtualized west coast offices (3 locations).</li>
-        <li>Led second round of all remote office virtualizations (7 locations, 2013).</li>
+        <li>As an SRE, I provided leadership, design/architecture, and mentoring across multiple product teams. I also contributed to projects establishing DoD RMF compliance at our Melbourne Center of Excellence.</li>
+        <li>Introduced new DevOps processes to improve project agility, efficiency, and turnaroud utilizing Vagrant, Puppet, Foreman, and Git.</li>
+        <li>Automated provisioning/hardening/reporting of VMs using Kickstart/Foreman/Puppet.</li>
+        <li>Established local build patterns using Vagrant, Puppet, Foreman, and Git.</li>
+        </ul>
+
+    </article>
+    <article>
+        <header>
+            <h1>Sabbatical</h1>
+            <span><address>2015 - 2016</address></span><br />
+        </header>
+        <ul>
+        <li>I stamped my footprints through 16 countries. Please ask away!</li>
+        </ul>
+
+    </article>
+    <article>
+        <header>
+            <h1>TNSC</h1>
+            <span><address>Senior Systems Engineer</address></span><br />
+            <span><address>Melbourne, FL</address><time>2014 - 2015 (Consulting)</time></span>
+        </header>
+        <ul>
+        <li>Performed greenfield architecture design and infrastructure migration projects for clients in the SMB business sector. Full technical project ownership with customer contact from kickoff to completion.</li>
+        <li>Instrumental in technical leadership/mentoring other engineers within the organization.</li>
+        <li>Succesful projects included: VMWare ESXi virtualizations/upgrades, Cisco and HP switching infrastructure forklift upgrades and design changes.</li>
+        </ul>
+
+    </article>
+    <article>
+        <header>
+            <h1>ENSCO</h1>
+            <span><address>Senior Systems Engineer</address></span><br />
+            <span><address>Melbourne, FL </address><time>2008 - 2014 (Aerospace)</time></span>
+        </header>
+        <ul>
+        <li>Member of an operations team providing architecture and administration for enterprise infrastructure comprising multiple datacenters.</li>
+        <li>Responsible for backup administration, various virtualization platforms, HPC administration, storage architecture and adminstration.</li>
+        <li>Responsible for day to day operations of corporate email, VOIP, file/print/DNS services, and helpdesk.</li>
+        <li>Gained eligibility for TS/SCI access based on SSBI investigation completed in 2007.</li>
         </ul>
     </article>
 </section>
